{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 22,
  "lineage": "2d36886b-ccf5-5ac7-bada-2fc591a8dad9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:306428531241:instance/i-0ca9b4657531efe69",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca9b4657531efe69",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e05f57d3057456ee",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_ip": "10.0.1.215",
            "public_ip": "3.93.76.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03732a571d55e907e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02555a5e7d3634cb8",
            "tags": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-004c6883a1f325f4c"
            ]
          },
          "depends_on": [
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:306428531241:instance/i-09a9090bd8a829213",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a9090bd8a829213",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9dd8331ce66850e",
            "private_dns": "ip-10-0-2-227.ec2.internal",
            "private_ip": "10.0.2.227",
            "public_ip": "54.90.223.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf29c28c12c82a6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00db688fb062634bb",
            "tags": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-004c6883a1f325f4c"
            ]
          },
          "depends_on": [
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:internet-gateway/igw-094c9002b2ab83006",
            "id": "igw-094c9002b2ab83006",
            "owner_id": "306428531241",
            "tags": {
              "Name": "Demo IGW"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:loadbalancer/app/External-LB/ca346d0d8a3757c0",
            "arn_suffix": "app/External-LB/ca346d0d8a3757c0",
            "dns_name": "External-LB-715424619.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:306428531241:loadbalancer/app/External-LB/ca346d0d8a3757c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "security_groups": [
              "sg-05db2c371a9d9ce8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00db688fb062634bb"
              },
              {
                "subnet_id": "subnet-02555a5e7d3634cb8"
              }
            ],
            "subnets": [
              "subnet-00db688fb062634bb",
              "subnet-02555a5e7d3634cb8"
            ],
            "vpc_id": "vpc-02874e5916c985c97",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.web-sg",
            "aws_subnet.web-subnet-1",
            "aws_subnet.web-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:listener/app/External-LB/ca346d0d8a3757c0/18ef7e9d9b306bd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:306428531241:listener/app/External-LB/ca346d0d8a3757c0/18ef7e9d9b306bd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:loadbalancer/app/External-LB/ca346d0d8a3757c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.external-elb",
            "aws_lb_target_group.external-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317",
            "arn_suffix": "targetgroup/ALB-TG/48bdcfec635f2317",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317-20220616030328803500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317",
            "target_id": "i-0ca9b4657531efe69"
          },
          "depends_on": [
            "aws_instance.webserver1",
            "aws_lb_target_group.external-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317-20220616030329311600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:306428531241:targetgroup/ALB-TG/48bdcfec635f2317",
            "target_id": "i-09a9090bd8a829213"
          },
          "depends_on": [
            "aws_instance.webserver2",
            "aws_lb_target_group.external-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:route-table/rtb-02d2565386a371b79",
            "id": "rtb-02d2565386a371b79",
            "owner_id": "306428531241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094c9002b2ab83006",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebRT"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f8ee9f32aeccfdb",
            "route_table_id": "rtb-02d2565386a371b79",
            "subnet_id": "subnet-02555a5e7d3634cb8"
          },
          "depends_on": [
            "aws_route_table.web-rt",
            "aws_subnet.web-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05574a61d51d9c64b",
            "route_table_id": "rtb-02d2565386a371b79",
            "subnet_id": "subnet-00db688fb062634bb"
          },
          "depends_on": [
            "aws_route_table.web-rt",
            "aws_subnet.web-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:security-group/sg-075402050f02b2736",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-075402050f02b2736",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004c6883a1f325f4c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "306428531241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_security_group.webserver-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:security-group/sg-05db2c371a9d9ce8e",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05db2c371a9d9ce8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "306428531241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:security-group/sg-004c6883a1f325f4c",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004c6883a1f325f4c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from web layer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db2c371a9d9ce8e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Webserver-SG",
            "name_prefix": "",
            "owner_id": "306428531241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_security_group.web-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:subnet/subnet-0db381efc495dff1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0db381efc495dff1e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306428531241",
            "tags": {
              "Name": "Application-1a"
            },
            "tags_all": {
              "Name": "Application-1a"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:subnet/subnet-09b6d7758323b70ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-09b6d7758323b70ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306428531241",
            "tags": {
              "Name": "Application-2b"
            },
            "tags_all": {
              "Name": "Application-2b"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:subnet/subnet-0a403d9a317b00465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0a403d9a317b00465",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306428531241",
            "tags": {
              "Name": "Database-1a"
            },
            "tags_all": {
              "Name": "Database-1a"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:subnet/subnet-06abab546dd43aaa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-06abab546dd43aaa8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306428531241",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:subnet/subnet-02555a5e7d3634cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02555a5e7d3634cb8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306428531241",
            "tags": {
              "Name": "Web-1a"
            },
            "tags_all": {
              "Name": "Web-1a"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:subnet/subnet-00db688fb062634bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00db688fb062634bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306428531241",
            "tags": {
              "Name": "Web-2b"
            },
            "tags_all": {
              "Name": "Web-2b"
            },
            "vpc_id": "vpc-02874e5916c985c97"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306428531241:vpc/vpc-02874e5916c985c97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3063b30c9958b37",
            "default_route_table_id": "rtb-09ae498fa792f2c82",
            "default_security_group_id": "sg-05a3d66415d9e7e14",
            "dhcp_options_id": "dopt-0e4bc7f4995845fd3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02874e5916c985c97",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ae498fa792f2c82",
            "owner_id": "306428531241",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}